2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_incidents.php
	  include/functions_inventories.php: Fixed bug
	importing objects from csv.

2015-05-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  extras/import_users_from_csv.php
	  extras/migrate.sql
	  general/home.php
	  godmode/usuarios/configurar_usuarios.php
	  godmode/grupos/configurar_grupos.php
	  godmode/grupos/lista_grupos.php
	  include/functions_api.php
	  include/functions_user.php
	  include/help/en/help_import_from_csv.php
	  include/help/es/help_import_from_csv.php
	  operation/main_menu.php
	  operation/side_menu.php: Removed simple mode.

	* extras/mr/22.sql: Added file.

	* operation/incidents_simple: Deleted dir.

	* include/export_csv.php
	  include/functions_incidents.php: Changed ids for
	text in export to csv. Ticket 2274.

	* operation/incidents/type_detail.php: Changed
	management of ticket types.

	* operation/inventories/inventory_reports_detail.php:
	Fixed import to csv. Ticket 2188.

	* operation/kb/browse.php
	  operation/kb/browse_data.php: Fixed KB edition. 
	Ticket 2273.  

2015-05-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql: Update token.

2015-05-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  include/functions_form.php
	  include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_dashboard_detail.php
	  operation/incidents/incident_search.php: Added SLA compliance 
	interval in ticket search.

	* extras/mr/21.sql: Added file.
	
	* include/language/index.pot: Updated translations to launchpad.

2015-05-21  Vanessa Gil <vanessa.gil@artica.es>
	
	* index.php: Fixed security vulnerability
	in password change.

2015-05-18  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_dbdata.sql
	  include/ajax/incidents.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php: Fixed linked
	fields.
